# playwright-bdd-framework

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Git hub repository.txt  Jenkinsfile  LICENSE  README.md  SECURITY.md  azure-pipelines.yml  conftest.py  docker-compose.yml  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml
1/: index.html
1/export/: influxDbData.txt
10/: index.html
10/export/: influxDbData.txt
11/: index.html
11/export/: influxDbData.txt
12/: index.html
12/export/: influxDbData.txt
13/: index.html
13/export/: influxDbData.txt
14/: index.html
14/export/: influxDbData.txt
15/: index.html
15/export/: influxDbData.txt
16/: index.html
16/export/: influxDbData.txt
17/: index.html
17/export/: influxDbData.txt
18/: index.html
18/export/: influxDbData.txt
19/: index.html
19/export/: influxDbData.txt
2/: index.html
2/export/: influxDbData.txt
20/: index.html
20/export/: influxDbData.txt
21/: index.html
21/export/: influxDbData.txt
22/: index.html
22/export/: influxDbData.txt
23/: index.html
23/export/: influxDbData.txt
24/: index.html
24/export/: influxDbData.txt
25/: index.html
25/export/: influxDbData.txt
26/: index.html
26/export/: influxDbData.txt
27/: index.html
27/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
27/export/: influxDbData.txt  prometheusData.txt
28/: index.html
29/: index.html
3/: index.html
30/: index.html
31/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
config/: __init__.py  config.py
docs/: README.md  architecture.md  environments.md  faq.md  installation.md  quick-start.md  usage.md
features/: login.feature  product_search.feature  registration.feature  winvinaya_foundation.feature
fixtures/: __init__.py  browser_fixtures.py
pages/: __init__.py  base_page.py  home_page.py  login_page.py  registration_page.py  winvinaya_foundation_page.py
step_definitions/: __init__.py  common_steps.py  conftest.py  login_steps.py  registration_steps.py  winvinaya_foundation_steps.py
utils/: accessibility_checker.py  browser_manager.py  data_reader.py  logger.py  performance_monitor.py  report_helper.py  screenshot_helper.py
(+1263 files in other folders)
